one round of corrections

--- a/tf.tex
+++ b/tf.tex
@@ -11,6 +11,7 @@
 \newtheorem{proposition}{Proposición}
 \newtheorem{note}{Nota}
 \newtheorem{definition}{Definición}
+\newenvironment{proof}{\paragraph{Demostración:}}{\hfill$\square$}
 
 \author{Exequiel Aguirre}
 \title{Subgrupos discretos del grupo de Heisenberg }
@@ -53,14 +54,13 @@ dimensión 2.
  Entonces: V es un espacio hiperbólico y dim(V) es par.
 \end{theorem}
 
-
-Demostración:
+\begin{proof}
 Como $\psi$ es no degenerada entonces puedo asumir que $\psi \neq 0$.
-Existen entonces, $\tilde{e}_1$ y $f_1$ no nulos, tales que $\psi(\tilde{e}_1,f_1)=c\neq0$.
+Existen entonces, $\tilde{e}_1$ y $f_1$ no nulos, tales que $\psi(\tilde{e}_1,f_1)=c\neq0$.\newline
 Defino, $e_1=\frac{\tilde{e}_1}{c}$ entonces, $\psi(e_1,f_1)=1$
 
-Afirmación 1: $e_1,f_1$, son linealmente independientes.
-Supongamos que  $c_1 e_1 +c_2 f_1 = 0$ con $c_1,c_2 \in \mathbb{R}$  donde $c_1\neq0$ o  $c_2\neq0$
+Afirmación 1: $e_1,f_1$, son linealmente independientes.\newline
+Supongamos que  $c_1 e_1 +c_2 f_1 = 0$ con $c_1,c_2 \in \mathbb{R}$  donde $c_1\neq0$ o  $c_2\neq0$\newline
 Caso $c_1\neq0$:
 Entonces tenemos que,
 $0=\psi(e_1,e_1)=\psi(e_1,- \frac{c_2}{c_1} f_1)= - \frac{c_2}{c_1} \psi(e_1,f_1)=- \frac{c_2}{c_1} \Rightarrow c_2=0$
@@ -74,7 +74,7 @@ Dado que $\psi(e_1,f_1)=1$ y $\psi$ es alternante, tenemos que:
 \begin{itemize}
  \item $\psi(e_1,e_1)=0$
  \item $\psi(f_1,f_1)=0$
- \item $\psi(f_1,e_1)=0$
+ \item $\psi(f_1,e_1)=-1$
 \end{itemize}
 
 Por lo que, 
@@ -87,7 +87,7 @@ $$
 
 Se ve así que $\psi|_{P_1}$ es no degenerada $\Rightarrow P_1$ es un plano hiperbólico.
 
-Por Lema 1: $V=P_1 \oplus P_1^{\bot}$, con $P_1^{\bot}={v \in V : \psi(v,e_1)=0=\psi(v,f_1)}$
+Por Lema 1: $V=P_1 \oplus P_1^{\bot}$, con $P_1^{\bot}=\{v \in V : \psi(v,e_1)=0=\psi(v,f_1)\}$
 Por inducción, aplico la hipotesis a $\psi|P_1^{\bot}$ y obtengo los pares $(e_i,f_i)$ con $i \in \mathbb{N}$
 
 Entonces sea $\beta$ la base: $\beta={e_1,f_1,...,e_n,f_n}$.
@@ -104,7 +104,40 @@ $$\psi =
 \end{bmatrix}
 $$
 
-De $\beta$ se ve que la dim(V) es par.
+De $\beta$ se ve que la dim(V) es par. 
+\end{proof}
+
+\begin{lemma}
+ Sea V un espacio vectorial de dimensión finita, sobre un subcuerpo F del cuerpo de los números complejos y
+ $\psi$ una forma bilineal alternante no degenerada, en V.
+ Entonces existe un subespacio $P_1$, tal que \newline
+ $V = P_1 \oplus P_1^{\bot}$
+ donde $P_1^{\bot}= \{ \alpha \in V: \psi(\alpha,\beta)=0$  $\forall$  $\beta \in P_1 \} $
+ \end{lemma}
+ 
+ \begin{proof}
+ Sea v cualquier elemento en V.
+ Defino 
+ $$v_1:=\psi(v,f_1)e_1-\psi(v,e_1)f_1$$
+ $$v_2:=v-v_1$$
+ Notar que $v_1 \in <e_1,f_1>=P_1$ y $v_2 \in P_1^{\bot}$, pues 
+ $\psi(v_2,e_1)=\psi(v,e_1)-\psi(v_1,e_1)=\psi (v,e_1)-[\psi(v,f_1) \psi(e_1,e_1) + \psi(v,e_1) \psi(f_1,e_1)]=
+ \psi(v_1,e_1)- \psi(v,e_1)=0$.\newline
+ Análogamente $\psi(v_2,f_1)=0$.
+ 
+ Es decir, que $v=v-v_1+v_1=v_2 + v_1$ con $v_2 \in P_1^{\bot}$ y $v_1 \in P_1$.\newline
+ Además, $P_1  \cap P_1^{\bot} = \{0\}$, pues si  $\tilde{v} \in  P_1 \cap P_1^{\bot}$ entonces
+ $\tilde{v} \in P_1 \Rightarrow \tilde{v}=a e_1 + b f_1 \Rightarrow 
+ \psi(\tilde{v},e_1)=\psi(a e_1 + b f_1,e_1)=-b$ y $\psi(\tilde{v},f_1)=\psi(a e_1 + b f_1,f_1)=a $
+ 
+ Es decir que podemos escribir $\tilde{v}=\psi(\tilde{v},f_1) e_1 - \psi(\tilde{v},e_1) f_1=0$ pues 
+ $\tilde{v} \in P_1^{\bot}.$
+ Así se ve que $V = P_1 \oplus P_1^{\bot}$ 
+\end{proof} 
+
+
+
+
 
 
  \section{Referencias}
